Wiring NachoUI for mobile

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-cli": "^6.23.0",
     "compression": "^1.6.2",
     "express": "^4.14.1",
+    "nachos-ui": "^0.1.2",
     "node-uuid": "^1.4.7",
     "react": "15.4.2",
     "react-bar-chart": "^0.1.1",
